Try to get this shit working

--- a/nginx/conf/sites-enabled/default.conf
+++ b/nginx/conf/sites-enabled/default.conf
@@ -19,7 +19,7 @@ server {
 
     # pass the PHP scripts to FastCGI server
     # @see http://php.net/manual/fr/install.unix.nginx.php
-    location ~* \.php$ {
+    location ~* \.php(/|$) {
         
         # How to connect to php-fpm
         fastcgi_pass    unix:/var/run/php-fpm.sock;
