--- a/nginx/conf/sites-enabled/default.conf
+++ b/nginx/conf/sites-enabled/default.conf
@@ -1,52 +1,32 @@
 #
-# Default configuration for php-fpm
+# Default configuration for wallabag
 #
-# @see http://tweaked.io/guide/nginx/
+# @see http://doc.wallabag.org/fr/master/user/installation.html
 # 
-
 server {
-
     listen 80;
+    root /var/www/web;
 
-    root   /var/www;
-    index  index.html index.htm index.php app.php;
-
-    # redirect server error pages to the static page
-    error_page   500 502 503 504  /50x.html;
-    location = /50x.html {
-        root   /usr/share/nginx/html;
+    location / {
+        # try to serve file directly, fallback to app.php
+        try_files $uri /app.php$is_args$args;
     }
-
-    # pass the PHP scripts to FastCGI server
-    # @see http://php.net/manual/fr/install.unix.nginx.php
-    location ~* \.php(/|$) {
-        
-        # How to connect to php-fpm
-        fastcgi_pass    unix:/var/run/php-fpm.sock;
+    location ~ ^/app\.php(/|$) {
+        fastcgi_pass unix:/var/run/php-fpm.sock;
         fastcgi_split_path_info ^(.+\.php)(/.*)$;
         include fastcgi_params;
-
-        # Default file for index
-        fastcgi_index   app.php;
-
-        # Script configuration
-        fastcgi_param   SCRIPT_FILENAME    $document_root$fastcgi_script_name;
-        fastcgi_param   SCRIPT_NAME        $fastcgi_script_name;
-
-        # Performance tuning
-        # @see http://tweaked.io/guide/nginx/
-        fastcgi_buffer_size 128k;
-        fastcgi_buffers 256 16k;
-        fastcgi_busy_buffers_size 256k;
-        fastcgi_temp_file_write_size 256k;
-
-        # This file is present on Debian systems..
-
+        # When you are using symlinks to link the document root to the
+        # current version of your application, you should pass the real
+        # application path instead of the path to the symlink to PHP
+        # FPM.
+        # Otherwise, PHP's OPcache may not properly detect changes to
+        # your PHP files (see https://github.com/zendtech/ZendOptimizerPlus/issues/126
+        # for more information).
+        fastcgi_param  SCRIPT_FILENAME  $realpath_root$fastcgi_script_name;
+        fastcgi_param DOCUMENT_ROOT $realpath_root;
+        # Prevents URIs that include the front controller. This will 404:
+        # http://domain.tld/app.php/some-path
+        # Remove the internal directive to allow URIs like this
+        internal;
     }
-
-    # Security deny .ht* files like htaccess
-    location ~ /\.ht {
-      deny  all;
-    }
-
 }
