--- a/nginx/conf/sites-enabled/default.conf
+++ b/nginx/conf/sites-enabled/default.conf
@@ -1,32 +1,49 @@
 #
 # Default configuration for wallabag
 #
-# @see http://doc.wallabag.org/fr/master/user/installation.html
-# 
-server {
-    listen 80;
-    root /var/www/web;
+# @see http://tweaked.io/guide/nginx/
+# @see http://doc.wallabag.org/fr/master/user/installation.html#installation
+#
 
-    location / {
-        # try to serve file directly, fallback to app.php
-        try_files $uri /app.php$is_args$args;
-    }
-    location ~ ^/app\.php(/|$) {
-        fastcgi_pass unix:/var/run/php-fpm.sock;
-        fastcgi_split_path_info ^(.+\.php)(/.*)$;
-        include fastcgi_params;
-        # When you are using symlinks to link the document root to the
-        # current version of your application, you should pass the real
-        # application path instead of the path to the symlink to PHP
-        # FPM.
-        # Otherwise, PHP's OPcache may not properly detect changes to
-        # your PHP files (see https://github.com/zendtech/ZendOptimizerPlus/issues/126
-        # for more information).
-        fastcgi_param  SCRIPT_FILENAME  $realpath_root$fastcgi_script_name;
-        fastcgi_param DOCUMENT_ROOT $realpath_root;
-        # Prevents URIs that include the front controller. This will 404:
-        # http://domain.tld/app.php/some-path
-        # Remove the internal directive to allow URIs like this
-        internal;
-    }
+server {
+
+  listen 80;
+
+  root   /var/www/web;
+
+  # redirect server error pages to the static page
+  error_page   500 502 503 504  /50x.html;
+  location = /50x.html {
+    root   /usr/share/nginx/html;
+  }
+
+  # Wallabag stuff
+  location / {
+    # try to serve file directly, fallback to app.php
+    try_files $uri /app.php$is_args$args;
+  }
+  location ~ ^/app\.php(/|$) {
+    fastcgi_pass unix:/var/run/php-fpm.sock;
+    fastcgi_split_path_info ^(.+\.php)(/.*)$;
+    include fastcgi_params;
+    # When you are using symlinks to link the document root to the
+    # current version of your application, you should pass the real
+    # application path instead of the path to the symlink to PHP
+    # FPM.
+    # Otherwise, PHP's OPcache may not properly detect changes to
+    # your PHP files (see https://github.com/zendtech/ZendOptimizerPlus/issues/126
+    # for more information).
+    fastcgi_param  SCRIPT_FILENAME  $realpath_root$fastcgi_script_name;
+    fastcgi_param DOCUMENT_ROOT $realpath_root;
+    # Prevents URIs that include the front controller. This will 404:
+    # http://domain.tld/app.php/some-path
+    # Remove the internal directive to allow URIs like this
+    internal;
+  }
+
+  # Security deny .ht* files like htaccess
+  location ~ /\.ht {
+    deny  all;
+  }
+
 }
